--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang="ko")
     head
-        title #{lotName}::웹 할인
+        title REST API EXAMPLE
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet", href="/static/css/styles.css")
@@ -9,23 +9,6 @@ html(lang="ko")
         //- script(defer, src="./js/common.js") 
     body
         header 
-            nav.nav 
-                a(href="/")  CMCNI
-                .nav-dropdown 
-                    i.fas.fa-bars.nav-dropdown-btn
-                    .nav-dropdown-content 
-                        a(href="/")
-                            i.fas.fa-user-cog 
-                            span 매장설정
-                        a(href="/") 
-                            i.fas.fa-chart-bar 
-                            span 할인내역  
-                        a(href="/") 
-                            i.fas.fa-lock 
-                            span 암호변경
-                        a(href="/") 
-                            i.fas.fa-sign-out-alt 
-                            span 로그아웃
         main
             block content
 
